--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -148,8 +148,6 @@ html i, html em, html b, html strong, html span {
     position: relative;
     display: block;
     overflow: hidden;
-    max-width: 500px;
-    min-width: 350px;
     margin: 1rem auto;
     text-transform: uppercase;
     border: 1px solid currentColor;
@@ -166,17 +164,18 @@ html i, html em, html b, html strong, html span {
 
     overflow: hidden;
     max-width: 500px;
-    min-width: 350px;
+    min-width: 300px;
     margin: 1rem auto;
     text-transform: uppercase;
     border: 1px solid currentColor;
     text-align: left;
     width: 60%;
+    line-height: 30px;
+    height: 45px;
 }
 
 .btn-animation-facebook {
     color: #3b5998;
-    line-height: 50px;
     background-color: white;
 }
 
@@ -203,7 +202,6 @@ html i, html em, html b, html strong, html span {
 
 .btn-animation-twitter {
     color: #55acee;
-    line-height: 50px;
     background-color: white;
 }
 
@@ -230,7 +228,6 @@ html i, html em, html b, html strong, html span {
 
 .btn-animation-instagram {
     color: #FCAF45;
-    line-height: 50px;
     background-color: white;
 }
 
@@ -257,7 +254,6 @@ html i, html em, html b, html strong, html span {
 
 .btn-animation-google {
     color: #dd4b39;
-    line-height: 50px;
     background-color: white;
 }
 
@@ -286,4 +282,16 @@ html i, html em, html b, html strong, html span {
     background: url("../theme/plugins/images/login-register.jpg") center center/cover no-repeat !important;
     height: 100%;
     /*position: fixed;*/
+}
+
+
+.label-between{
+    color: white;
+    margin: 145px auto;
+}
+
+.login-background{
+    background-image: url("../theme/plugins/images/login_bg.png");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
