--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -283,6 +283,7 @@ html i, html em, html b, html strong, html span {
     background: url("../theme/plugins/images/login_bg.png") center center/cover no-repeat !important;
     height: 100%;
     position: fixed;
+    width: 100%;
 }
 .login-box-cus{
     /*background: #fff;*/
@@ -343,4 +344,36 @@ html i, html em, html b, html strong, html span {
 .thumb-extra-lg{
     height: 180px;
     width: 180px;
+}
+
+.main-content-page{
+    background-color: #f0f6ff !important;
+}
+
+.btn-white{
+    background: transparent;
+    border: 1px solid #ffffff !important;
+    color: white;
+    border-radius: 60px !important;
+}
+.btn-white:hover {
+    background: white !important;
+    color: #034158;
+    opacity: .8;
+}
+
+.bg-white{
+    background-color: white;
+}
+
+.cover-img{
+    background-image: url("../theme/plugins/images/nightsky.jpg");
+    min-height: 300px;
+    background-blend-mode: darken;
+    background-size: cover;
+    padding: 1.25rem;
+}
+
+.avatar{
+    padding: 2.15rem;
 }
