--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -411,3 +411,5 @@ html i, html em, html b, html strong, html span {
     background-color:#2573b6 !important;
 }
 
+
+/*background: linear-gradient(135deg,#736cc7 21%,#3190f0 100%,#3190f0 100%);*/
