--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -47,55 +47,55 @@
 
 
 /*.myButt {*/
-    /*outline: none;*/
-    /*border: none;*/
-    /*padding: 20px;*/
-    /*display: block;*/
-    /*margin: 50px auto;*/
-    /*cursor: pointer;*/
-    /*font-size: 20px;*/
-    /*background-color: transparent;*/
-    /*position: relative;*/
-    /*border: 2px solid #fff;*/
-    /*transition: all 0.5s ease;*/
-    /*-webkit-transition: all 0.5s ease;*/
-    /*-moz-transition: all 0.5s ease;*/
-    /*-o-transition: all 0.5s ease;*/
-    /*-ms-transition: all 0.5s ease;*/
+/*outline: none;*/
+/*border: none;*/
+/*padding: 20px;*/
+/*display: block;*/
+/*margin: 50px auto;*/
+/*cursor: pointer;*/
+/*font-size: 20px;*/
+/*background-color: transparent;*/
+/*position: relative;*/
+/*border: 2px solid #fff;*/
+/*transition: all 0.5s ease;*/
+/*-webkit-transition: all 0.5s ease;*/
+/*-moz-transition: all 0.5s ease;*/
+/*-o-transition: all 0.5s ease;*/
+/*-ms-transition: all 0.5s ease;*/
 /*}*/
 
 /*.one {*/
-    /*border-color: #fff;*/
-    /*overflow: hidden;*/
-    /*color: #fff;*/
+/*border-color: #fff;*/
+/*overflow: hidden;*/
+/*color: #fff;*/
 /*}*/
 
 /*.one .insider {*/
-    /*background-color: #fff;*/
-    /*width: 100%;*/
-    /*height: 20px;*/
-    /*position: absolute;*/
-    /*left: -135px;*/
-    /*transform: rotateZ(45deg);*/
-    /*-webkit-transform: rotateZ(45deg);*/
-    /*-moz-transform: rotateZ(45deg);*/
-    /*-o-transform: rotateZ(45deg);*/
-    /*-ms-transform: rotateZ(45deg);*/
+/*background-color: #fff;*/
+/*width: 100%;*/
+/*height: 20px;*/
+/*position: absolute;*/
+/*left: -135px;*/
+/*transform: rotateZ(45deg);*/
+/*-webkit-transform: rotateZ(45deg);*/
+/*-moz-transform: rotateZ(45deg);*/
+/*-o-transform: rotateZ(45deg);*/
+/*-ms-transform: rotateZ(45deg);*/
 /*}*/
 
 /*.one:hover {*/
-    /*background-color: #f44336;*/
-    /*border-color: #fff;*/
-    /*color: #fff;*/
+/*background-color: #f44336;*/
+/*border-color: #fff;*/
+/*color: #fff;*/
 /*}*/
 
 /*.one:hover .insider {*/
-    /*transition: all 0.3s ease;*/
-    /*-webkit-transition: all 0.3s ease;*/
-    /*-moz-transition: all 0.3s ease;*/
-    /*-o-transition: all 0.3s ease;*/
-    /*-ms-transition: all 0.3s ease;*/
-    /*left: 135px;*/
+/*transition: all 0.3s ease;*/
+/*-webkit-transition: all 0.3s ease;*/
+/*-moz-transition: all 0.3s ease;*/
+/*-o-transition: all 0.3s ease;*/
+/*-ms-transition: all 0.3s ease;*/
+/*left: 135px;*/
 /*}*/
 
 
@@ -200,10 +200,11 @@ html i, html em, html b, html strong, html span {
 }
 
 .btn-instagram-cus {
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     border: 1px solid #fec107;
     color: white;
 }
+
 .btn-animation-instagram {
     color: #D6249F;
     background-color: white;
@@ -216,7 +217,7 @@ html i, html em, html b, html strong, html span {
     left: 0;
     right: 0;
     bottom: 0;
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 0%, #fd5949 26%,#d6249f 60%,#285AEB 130%);
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 0%, #fd5949 26%, #d6249f 60%, #285AEB 130%);
     transform: translateX(-100%);
 }
 
@@ -260,92 +261,99 @@ html i, html em, html b, html strong, html span {
 .login {
     background: url("../theme/plugins/images/login_bg.png") center center/cover no-repeat !important;
     height: 100%;
-    position: fixed;
+    /*position: fixed;*/
+    position: absolute;
     width: 100%;
+    display: flex;
 }
-.login-box-cus{
+
+.login-box-cus {
     /*background: #fff;*/
     width: 400px;
     margin: 2% auto 4%;
 }
 
-.label-between{
+.label-between {
     color: white;
     margin: 145px auto;
 }
 
-.login-background{
+.login-background {
     background-image: url("../theme/plugins/images/login_bg.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-.remember-checkbox{
+.remember-checkbox {
     margin-top: 7px;
     margin-right: -5px;
 }
 
-.mg-left-5{
+.mg-left-5 {
     margin-left: 5px;
 }
-.pd-left-10{
+
+.pd-left-10 {
     padding-left: 10px !important;
     border-radius: 10px;
 }
 
-.input-login{
+.input-login {
     padding-left: 10px !important;
     border-radius: 10px !important;
     background-color: white !important;
 }
+
 .input-icon-login {
     background-color: transparent !important;
     border-top: none !important;
     border-left: none !important;
     color: white !important;
 }
-.no-bg{
+
+.no-bg {
     background: transparent !important;
 }
 
-.logo-login{
+.logo-login {
     border: 3px solid #fff;
     border-radius: 4px;
 }
 
-.logo-main{
+.logo-main {
     border: 2px solid #fff;
     border-radius: 4px;
     width: 60%;
 }
 
-.thumb-extra-lg{
+.thumb-extra-lg {
     height: 180px;
     width: 180px;
 }
 
-.main-content-page{
+.main-content-page {
     background-color: #f0f6ff !important;
 }
 
-.btn-white{
+.btn-white {
     background: transparent;
     border: 1px solid #ffffff !important;
     color: white;
     border-radius: 60px !important;
 }
+
 .btn-white:hover {
     background: white !important;
     color: #034158 !important;
     /*opacity: .8;*/
 }
 
-.bg-white{
+.bg-white {
     background-color: white;
 }
 
 /************** Profile style**************/
-.cover-img{
+.cover-img {
     background-image: url("../theme/plugins/images/nightsky.jpg");
     min-height: 300px;
     background-blend-mode: darken;
@@ -353,59 +361,66 @@ html i, html em, html b, html strong, html span {
     padding: 1.25rem;
 }
 
-.link-img{
+.link-img {
     width: 50px !important;
     margin-left: -12px !important;
 }
-.link-img-label{
+
+.link-img-label {
     padding-top: 1rem;
     padding-left: 1rem;
 }
 
-.avatar{
+.avatar {
     padding: 2.15rem;
 }
 
-.tabs-style-linemove nav{
-    background:#f7fafc
+.tabs-style-linemove nav {
+    background: #f7fafc
 }
 
-.tabs-style-linemove nav li:last-child::before{
-    position:absolute;
-    bottom:0;
-    left:0;
-    width:100%;
-    height:4px;
-    background:#2573b6;
-    content:'';
-    -webkit-transition:-webkit-transform .3s;
-    transition:transform .3s
+.tabs-style-linemove nav li:last-child::before {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: #2573b6;
+    content: '';
+    -webkit-transition: -webkit-transform .3s;
+    transition: transform .3s
 }
-.tabs-style-linemove nav li:first-child.tab-current~li:last-child::before{
-    -webkit-transform:translate3d(-400%,0,0);
-    transform:translate3d(-400%,0,0)
+
+.tabs-style-linemove nav li:first-child.tab-current ~ li:last-child::before {
+    -webkit-transform: translate3d(-400%, 0, 0);
+    transform: translate3d(-400%, 0, 0)
 }
-.tabs-style-linemove nav li:nth-child(2).tab-current~li:last-child::before{
-    -webkit-transform:translate3d(-300%,0,0);
-    transform:translate3d(-300%,0,0)
+
+.tabs-style-linemove nav li:nth-child(2).tab-current ~ li:last-child::before {
+    -webkit-transform: translate3d(-300%, 0, 0);
+    transform: translate3d(-300%, 0, 0)
 }
-.tabs-style-linemove nav li:nth-child(3).tab-current~li:last-child::before{
-    -webkit-transform:translate3d(-200%,0,0);
-    transform:translate3d(-200%,0,0)
+
+.tabs-style-linemove nav li:nth-child(3).tab-current ~ li:last-child::before {
+    -webkit-transform: translate3d(-200%, 0, 0);
+    transform: translate3d(-200%, 0, 0)
 }
-.tabs-style-linemove nav li:nth-child(4).tab-current~li:last-child::before{
-    -webkit-transform:translate3d(-100%,0,0);
-    transform:translate3d(-100%,0,0)
+
+.tabs-style-linemove nav li:nth-child(4).tab-current ~ li:last-child::before {
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0)
 }
-.tabs-style-linemove nav a{
-    padding:30px 0;
-    color:#2b2b2b;
-    line-height:1;
-    -webkit-transition:color .3s,-webkit-transform .3s;
-    transition:color .3s,transform .3s
+
+.tabs-style-linemove nav a {
+    padding: 30px 0;
+    color: #2b2b2b;
+    line-height: 1;
+    -webkit-transition: color .3s, -webkit-transform .3s;
+    transition: color .3s, transform .3s
 }
-.tabs-style-linemove nav li.tab-current a{
-    background-color:#2573b6;
+
+.tabs-style-linemove nav li.tab-current a {
+    background-color: #2573b6;
     color: white;
     font-weight: bold;
 }
@@ -413,8 +428,17 @@ html i, html em, html b, html strong, html span {
 .nav-tabs > li.active > a, .nav-tabs .nav-link.active {
     font-weight: bold !important;
     color: white !important;
-    background-color:#2573b6 !important;
+    background-color: #2573b6 !important;
 }
 
+.step-register {
+    background: -webkit-linear-gradient(left, rgba(0, 168, 255, 0.5), rgba(185, 0, 255, 0.5));
+}
 
 /*background: linear-gradient(135deg,#736cc7 21%,#3190f0 100%,#3190f0 100%);*/
+
+@media only screen and (max-width: 400px) {
+    span.noshow {
+        display: none;
+    }
+}
